# pistou

./: Dockerfile  README.md  todo.md  versions.env
.github/workflows/: build.yml
backend/: .gitignore  Cargo.toml
backend/db/migrations/1.0.0/: down.sql  up.sql
backend/src/: app.rs  auth.rs  errors.rs  main.rs  schema.rs  tester.rs  tests.rs  utils.rs
backend/src/models/: advance_tests.rs  crud.rs  mod.rs  step.rs  step_tests.rs  user.rs  user_tests.rs
frontend/: .gitignore  .metadata  pubspec.yaml
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/fr/ninico/pistou/: MainActivity.kt
frontend/android/app/src/main/kotlin/fr/ninico/tesou/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: globals.dart  i18n.dart  main.dart
frontend/lib/components/: home.dart  media_player.dart  new_step.dart  new_user.dart  settings.dart  users_dropdown.dart
frontend/lib/models/: advance_crud.dart  answer.dart  crud.dart  mock_api.dart  new_position.dart  position.dart  preferences.dart  step.dart  user.dart
frontend/test/: models_test.dart  ui_test.dart
frontend/web/: index.html  manifest.json
