[package]
name = "pistou"
version = "1.0.0"
authors = [
  "Nicolas Pernoud <github@ninico.fr>"
]
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
env_logger = "0.9.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
actix-cors = "0.6"
actix-files = "0.6"
image = "0.24"
futures-core = "0.3"
futures-util = "0.3"
rand = "0.8"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
argon2 = "0.4.0"
sublime_fuzzy = "0.7"

[dev-dependencies]
actix-rt = "2.6"
regex = "1.5"
