[package]
name = "pistou"
version = "1.0.0"
authors = ["Nicolas Pernoud <github@ninico.fr>"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
actix-cors = "0.7.0"
actix-files = "0.6.6"
image = "0.25.2"
futures-core = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["sync"] }
argon2 = "0.5.3"
sublime_fuzzy = "0.7.0"

[dev-dependencies]
actix-rt = "2.10.0"
regex = "1.11.0"
